# iProTalk

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  package-lock.json
migrations/: 20240101000000_init.sql  20240102000000_add_reply_mention.sql  20260308000001_oauth.sql  20260308000002_audit_log.sql
scripts/: backup.sh  deploy.sh
src/: main.rs
src/api/: admin.rs  audit.rs  auth.rs  channels.rs  contacts.rs  files.rs  keys.rs  messages.rs  mod.rs  oauth.rs  presence.rs  push.rs  reactions.rs  users.rs  utils.rs  webhooks.rs
src/db/: mod.rs
src/middleware/: rate_limit.rs
src/models/: mod.rs
static/: index.html  sw.js
static/assets/: index-D9Xcitii.css  index-DbNtvIFP.js  index-aBzrOvi1.js
web-client/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
web-client/src/: App.css  App.tsx
web-client/src/api/: index.ts
web-client/src/components/: AdminInvites.tsx  AdminPanel.tsx  AdminWebhooks.tsx  AnnouncementBanner.tsx  Auth.tsx  ChannelCreateModal.tsx  Chat.tsx  ContactsPanel.tsx  ContextMenu.tsx  E2EESetup.tsx  EmojiPicker.tsx  FileMessage.tsx  ForwardModal.tsx  ImagePreview.tsx  ImagePreviewModal.tsx  MessageReaction.tsx  MessageReply.tsx  MessageSearch.tsx  ThreadSidebar.tsx  UserSearchModal.tsx  UserSettingsModal.tsx
web-client/src/lib/: crypto.ts  notifications.ts  useInView.ts
web-client/src/store/api/: adminApi.ts  authApi.ts  baseApi.ts  channelsApi.ts  contactsApi.ts  filesApi.ts  invitesApi.ts  pushApi.ts  webhooksApi.ts
web-client/src/store/slices/: authSlice.ts
